theme4/theme4.css
/* ... */
.ask .question { margin: 0.5em 0 0 1em; }



/*********************************** SIDEBAR ***********************************/
aside {
	background: rgba(var(--bg--rgb), var(--bg-opacity));
	display: flex;
	flex-direction: column;
	padding: 0.75em 0.5em;
}
/* Fixed sidebar (with fixed header or not) */
aside .sticky {
	position: sticky;
	top: 0.5em;
}
aside .sticky.header { top: calc(var(--title-height) + 1.5em) }
/* User icon */
#blogavatar {
	width: 100%;
	border: 0.4em solid var(--border);
}
/* Name, ask/submit, description */
#name-asksubmit {
	display: grid;
	grid-template-columns: 2em 1fr 2em;
	column-gap: 0.5em;
	align-items: center;
	justify-items: center;
}
#blogname {
	grid-column: 2;
	color: var(--headings);
	background-color: var(--accent1);
	width: 100%;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	height: 3em;
	padding: 0.5em;
	word-wrap: anywhere;
}
#asklink, #submitlink {
	width: 1.75em;
	height: 1.75em;
	display: flex;
	align-items: center;
	justify-content: center;
	background-color: var(--accent2);
}
#description {
	border: 0.25em solid var(--border);
	padding: 0.5em;
	text-align: center;
	background-color: var(--post);
}
/* Tag links and Random/Archive + Credit */
#taglinks, #credit-ra {
	display: grid;
	grid-template-columns: 1fr 1fr;
	column-gap: 0.5em;
	row-gap: 0.5em;
	margin: 0.75em 0;
	text-align: center;
}
#taglinks a, #credit-ra a {
	background-color: var(--accent2);
	padding: 0.25em 0.5em;
	display: flex;
	align-items: center;
	justify-content: center;
}
#credit-ra.random:not(.archive) #randomlink,
#credit-ra.archive:not(.random) #archivelink,
#creditlink { grid-column: 1 / span 2 }
/* Search bar */
form {
	display: grid;
	grid-template-columns: auto 1fr;
	align-items: center;
	border: 0.25em solid var(--border);
	margin: 0.75em 0;
	overflow: hidden;
}
form label {
	position: fixed;
	top: -100em;
}
form i.fa-search {
	background-color: var(--border);
	color: var(--post);
	height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	border-right: 0.25em solid var(--border);
	padding: 0 0.2em;
}
form input {
	width: 100%;
	background-color: var(--post);
	color: var(--text);
	border: none;
	padding: 0.25em 0.5em;
}
/* Custom page links */
#blogpages {
	border: 0.25em solid var(--border);
	margin: 0.75em 0;
	background-color: var(--post);
	overflow: hidden;
}
#blogpages a {
	display: block;
	text-align: center;
	padding: 0.3em;
}
#blogpages a:not(:last-child) { border-bottom: thin solid var(--accent2) }
#blogpages a.current-page { background-color: var(--accent2) }



/******************* BACK TO TOP / COLOR MODE TOGGLE BUTTONS *******************/
#buttons {
	position: fixed;
	bottom: 0;
	right: 0;
	z-index: 100;
}
#buttons > div {
	background: var(--accent1);
	border: 0.15em solid var(--border);
	--size: 2em;
	width: var(--size);
	height: var(--size);
	display: flex;
	align-items: center;
	justify-content: center;
	margin: 0.5em;
	cursor: pointer;
	opacity: 0.8;
}
#buttons > div:hover {
	opacity: 1;
	color: var(--links);
}
#tmblriframe i { transition: transform .4s }
#buttons #tmblriframe.active i {
	transform: rotate(-90deg);
	color: var(--links-hover);
}
.tmblr-iframe.tmblr-iframe--unified-controls {
	position: fixed;
	bottom: 0;
	top: unset;
	right: 3em;
}
.tmblr-iframe.tmblr-iframe--unified-controls:not(.active) { display: none }
body:not(.light) .fa-moon, body.light .fa-sun { display: none }



/****************************** RESPONSIVE SIZING ******************************/
@media (min-width: 47em) {
	#blogavatar.circle { margin-bottom: 0.5em }
}

@media (max-width: 47em) {
	/* Moving sidebar to bottom of blog */
	body {
		grid-template-columns: 1fr min(var(--post-width), 100%) 1fr;
	}
	
	aside {
		grid-row: 3;
		grid-column: 1 / span 3;
		--avatar-size: 5em;
		border-top: 0.5em solid var(--border);
	}
	
	#blogavatar {
		width: var(--avatar-size);
		height: var(--avatar-size);
		position: absolute;
	}
	
	#name-asksubmit {
		display: grid;
		height: var(--avatar-size);
		grid-column: 2;
		row-gap: 0.25em;
		align-items: center;
	}
	#name-asksubmit a.hidden { display: none }
	#name-asksubmit.ask, #name-asksubmit.submit { grid-template-columns: 1fr }
	#name-asksubmit.ask.submit { grid-template-columns: 1fr 1fr }
	#blogname {
		grid-row: 1;
		grid-column: 1 / span 2;
		align-self: top;
		height: unset;
		border-radius: var(--roundness);
	}
	#asklink, #submitlink { width: 100% }
	
	.postfooter .dropdown {
		left: unset;
		transform: unset;
		right: -0.5em;
	}
}

@media (max-width: 47em) and (min-width: 31em) {
	/* Rearranging sidebar */
	aside {
		grid-row: 3;
		grid-column: 1 / span 3;
		flex-direction: row;
		position: relative;
	}
	aside .sticky {
		display: grid;
		grid-template-columns: var(--avatar-size) 1fr 1fr;
		column-gap: 1em;
		row-gap: 1em;
	}
	#description {
		grid-row: 2 / span 2;
		grid-column: 1 / span 2;
		width: 100%;
		vertical-align: middle;
	}
	#taglinks, form, #blogpages, #credit-ra {
		height: 100%;
		margin: 0;
	}
	#credit-ra {
		grid-row: 3;
		grid-column: 3;
	}
	#blogpages {
		grid-column: 1 / span 3
	}
}

@media (max-width: 31em) {
	body { font-size: 90% }
	#name-asksubmit {
		margin: 0 0 0.75em var(--avatar-size);
		padding-left: 0.5em;
	}
}

